--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
+  
   <div class="emoji">
+    <h1>SMILING EMOJI</h1>
     <div class="face">
       <div class="eyes">
         <div class="left"></div>
