--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body> 
   <div class="emoji"> 
-    <div class="face">
+    <div class="face" title="please dont Hover me">
       <div class="eyes">
         <div class="left"></div>
         <div class="right"></div>
